# libonsen-java-jni

./: CMakeLists.txt  COPYING
src/: archive_info.c  file_utils.c  globals.h  onsen.c  plugins.c
